# lib/api-spec/openapi.yaml
@@ -681,9 +681,11 @@ components:
       properties:
         symbol:
           type: string
-        days:
+        months:
           type: integer
-          default: 30
+          default: 12
+          minimum: 1
+          maximum: 24
       required:
         - symbol
 
